# chatGPT-todo-list-plugin

./: README.md  main.py  manifest.json  openai.yaml  pyproject.toml
