[tool.poetry]
name = "chatGPT-todo-list-plugin"
version = "0.1.0"
description = "A simple chatGPT plugin for managing a to-do list."
authors = ["Oli <olivrg@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
replit = "^3.2.4"
Flask = "^2.1.3"
numpy = "^1.22.2"
urllib3 = "^1.26.12"
openai = "^0.10.2"
quart = "^0.14.1"
quart-cors = "^0.3.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"